--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "fusioncharts": "^3.16.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fusioncharts": "^3.1.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
